--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bootstrap": "^5.2.10",
+    "@types/jquery": "^3.5.30",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "jquery": "^3.7.1",
+    "jquery-ui": "^1.14.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
